--- a/src/styles/pages/_home.scss
+++ b/src/styles/pages/_home.scss
@@ -23,9 +23,15 @@
     align-items: center;
     justify-content: center;
     min-height: 100vh;
-    text-align: center;
     padding: 0 clamp(1.5rem, 6vw, 4rem);
     gap: 1rem;
+  }
+
+  &__text-block {
+    width: fit-content;
+    text-align: left;
+    display: flex;
+    flex-direction: column;
   }
 
   &__eyebrow {
