--- a/src/styles/pages/_settings.scss
+++ b/src/styles/pages/_settings.scss
@@ -190,6 +190,7 @@
 
   .exit {
     border: 1px solid $color-codevibes-exit-border;
+    color: $color-text-light;
     padding: 0.2rem 0.5rem;
     font-weight: 700;
     display: flex;
@@ -249,18 +250,24 @@
     color: #f5822a;
   }
 
-  .current-player img {
-    width: 0.9rem;
-    height: 0.9rem;
-    background: #2196f3;
-    border-radius: 999px;
-    padding: 0.15rem;
+  .current-player {
+    display: flex;
+    align-items: center;
+    gap: 0.3rem;
+
+    img {
+      width: 0.9rem;
+      height: 0.9rem;
+      background: #2196f3;
+      border-radius: 999px;
+      padding: 0.15rem;
+    }
   }
 
   .exit {
     background: transparent;
     border: 1px solid $color-gaming-exit-bg;
-    color: $color-gaming-exit-bg;
+    color: $color-text-light;
     border-radius: 999px;
     padding: 0.2rem 0.6rem;
     font-weight: 700;
